# lunnaris-web-framework

./: .gitignore  examples.py  pyproject.toml
lunnaris/: application.py  asgi.py  controller.py  di.py  enums.py  exceptions.py  handler.py  request.py  response.py  routes.py  serializer.py  types.py
lunnaris/templates/: dtos.py
lunnarisapp/: cli.py  creator.py
lunnarisapp/templates/: app.py  config.py  models.py  module_config.py  routes.py  services.py
lunnarisweb/: application.py  controller.py  endpoint.py  enums.py  request.py  routes.py  serializer.py
src/: app.py  config.json
src/auth/: config.py  dtos.py  models.py  routes.py  services.py
src/client/: config.py  dtos.py  models.py  routes.py  services.py
src/user/: config.py  dtos.py  models.py  routes.py  services.py
test/: mock.py  test_application.py  test_controller.py  test_di.py  test_handler.py  test_headers.py  test_request.py  test_serialization.py
